[package]
name = "cry"
version = "0.1.0"
authors = ["tiannian <dtiannian@aliyun.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generic-array = {version = "0.14", default-features = false}
digest = {version = "0.9", default-features = false}
curve25519-dalek = {version = "3", default-features = false, features = ["u32_backend"]}
